# Bluetooth-A2DP-Rust

./: Cargo.toml  DEPENDENCIES.md  LICENSE  README.md  a2dp-source.uf2  memory.x
.cargo/: config.toml
crates/a2dp-app/: Cargo.toml  build.rs
crates/a2dp-app/src/: config.rs  hci_classic.rs  lib.rs  main.rs  state_machine.rs
crates/audio-pipeline/: Cargo.toml
crates/audio-pipeline/src/: lib.rs  ring_buffer.rs
crates/bt-classic/: Cargo.toml
crates/bt-classic/src/: a2dp.rs  avdtp.rs  hci.rs  l2cap.rs  lib.rs  sdp.rs
crates/hal-pico2w/: Cargo.toml
crates/hal-pico2w/src/: bluetooth.rs  clocks.rs  led.rs  lib.rs
crates/sbc-encoder/: Cargo.toml
crates/sbc-encoder/src/: analysis.rs  bitalloc.rs  config.rs  frame.rs  lib.rs  quantizer.rs  tables.rs
crates/usb-audio/: Cargo.toml
crates/usb-audio/src/: descriptor.rs  lib.rs
