[package]
name = "bt-classic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bluetooth Classic host stack (L2CAP, SDP, AVDTP, A2DP) - no_std compatible"

[features]
default = []
std = []
defmt = ["dep:defmt"]

[dependencies]
defmt = { workspace = true, optional = true }
heapless = { workspace = true }
bt-hci = { workspace = true }
embedded-io-async = { workspace = true }

[dev-dependencies]
proptest = "1.5"
tokio = { version = "1", features = ["rt", "macros"] }
